# django-poetry-pysen-sample

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
django_pysen/: asgi.py  settings.py  urls.py  wsgi.py
