[tool.poetry]
name = "django_poetry_pysen"
version = "0.1.0"
description = ""
authors = ["tktcorporation"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.poetry.dev-dependencies]
pysen = {version = "^0.9.1", extras = ["lint"]}
pysen-ls = "^0.0.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
